--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
+    "starts": "PORT=8080 react-scripts start",
     "start": "set PORT=8080 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
